# dsa-feed-generator

./: .dockerignore  .gitignore  Dockerfile  Pipfile  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: routers.py  views.py
backend/api/modules/xml_parser/: __init__.py  parser.py
backend/backend/: config.sample.json  settings.py  urls.py
backend/frontend/: package-lock.json
backend/frontend/public/: manifest.json
backend/frontend/src/: App.js
frontend/: package-lock.json  package.json
src/api/: admin.py  models.py  serializers.py  signals.py  tasks.py  views.py
src/api/management/commands/: clearfiles.py
src/api/migrations/: 0001_initial.py
src/api/modules/xml_parser/: __init__.py
src/api/modules/xml_parser/tests/: test_parser.py
src/backend/: settings.py  urls.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/App/: App.js  App.module.css
src/frontend/src/axios/: axios.js
