[tool.poetry]
name = "dsa-feed-generator"
version = "1.0.0"
description = ""
authors = ["Dawid Dutkiewicz <dawid.dutkiewicz@stxnext.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "=2.1.11"
djangorestframework = "=3.9.1"
requests = "^2.22"
whitenoise = "^4.1"
lxml = "^4.5"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
